增加博客模块

--- a/qs/templates/partial/base.html
+++ b/qs/templates/partial/base.html
@@ -56,7 +56,7 @@
   </div>
 
   <!-- include header -->
-  {% include "partial/_footer.html" %}
+  <!--{% include "partial/_footer.html" %}-->
   <!-- block subpage add html or scripts -->
   {% block others %}
 
