--- a/user/templates/user/settings.html
+++ b/user/templates/user/settings.html
@@ -4,6 +4,7 @@
 
 {% block head %}
 	 <link rel="stylesheet" href=" {% static 'css/index.css' %}">
+	 <link rel="stylesheet" href="{% static 'js/jquery.Jcrop.min.js' %}" type="text/css" />
   {% endblock %}
 {% block mainbody %}
 
