--- a/qs/templates/partial/_header.html
+++ b/qs/templates/partial/_header.html
@@ -3,7 +3,7 @@
         <div class="row">
 
             <div class="col-md-2 text-center">
-                <h1><a class="main-text" href="/">ITSS Repository</a></h1>
+                <h1><a class="main-text" href="/"> Repository</a></h1>
             </div>
             <div class="col-md-7">
                 <div class="row">
