--- a/user/templates/user/settings.html
+++ b/user/templates/user/settings.html
@@ -15,77 +15,109 @@
 
 
    <div class="row">
-	   <div class="col-md-8">
+
+	   <div class="col-md-12">
 
 		   <!-- 在左边 -->
-		   <form  class="form-horizontal" method="post" action="settings">
-			   <fieldset>
-				    <legend class="">个人资料</legend>
-				 {% csrf_token %}
-					 <div class="form-group">
-						<label  class="col-sm-2 control-label">用户名</label>
-						<div class="col-sm-10">
-							<input  name="username" value="{{profile.user.username}}" class="form-control" placeholder="请输入用户名">
+
+			 <div class="tabs-left">
+
+                  <!-- Nav tabs -->
+                  <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab"><i class="fa fa-user"></i> 头像设置</a></li>
+                    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><i class="fa fa-code"></i> 资料设置</a></li>
+                    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><i class="fa fa-key fa-fw"></i> 修改密码</a></li>
+                    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><i class="fa fa-cog "></i> 博客设置</a></li>
+                  </ul>
+
+                  <!-- Tab panes -->
+                  <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane active" id="home">
+                          <div class="edit-handimage">
+
+
+
+								<!-- 在右边 -->
+								<form  action="{% url 'uploadavatar_upload' %}" method="post" enctype="multipart/form-data">
+									<fieldset>
+									<legend class="">头像设置</legend>
+									{% if profile.use_gravatar %}
+										 <img title="{{request.user.username}}" class="avatar-128" src="{{request.user.profile.avatar.large }}">
+									{% else %}
+										<img src="{{ profile.avatar_url }}" name="avatar" class="avatar-128"> <hr>
+									{% endif%}
+
+									{% csrf_token %}
+
+										<!--<button>{{ CHOOSE_IMAGE }}</button>-->
+										<input type="file"  name="uploadavatarfile" />
+
+
+										<button type="submit" class="btn btn-default" name="publish">上传头像</button>
+								   </fieldset>
+								</form>
+						   </div>
+
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="profile">
+						<div class="edit-profile">
+							<form  class="form-horizontal" method="post" action="settings">
+							   <fieldset>
+									<legend class="">个人资料</legend>
+								 {% csrf_token %}
+									 <div class="form-group">
+										<label  class="col-sm-2 control-label">用户名</label>
+										<div class="col-sm-10">
+											<input  name="username" value="{{profile.user.username}}" class="form-control" placeholder="请输入用户名">
+										</div>
+									 </div>
+
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">邮箱</label>
+										<div class="col-sm-10">
+											<input  name="email" value="{{ email }}" class="form-control" placeholder="邮箱">
+										</div>
+									 </div>
+
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">个人网站</label>
+										<div class="col-sm-10">
+											<input  name="website" value="{{ profile.website }}" class="form-control" placeholder="个人网站地址">
+										</div>
+									 </div>
+
+									<div class="form-group">
+										<label  class="col-sm-2 control-label">关于我</label>
+										<div class="col-sm-10">
+											<textarea  name="about_me" placeholder="多少写一点吧..." >{{ profile.about_me }}</textarea>
+										</div>
+									 </div>
+
+									<div class="control-group">
+										<div class="col-sm-10 col-sm-offset-2">
+											<button type="submit" class="btn btn-success" >保存资料</button>
+										</div>
+									</div>
+
+
+
+							   </fieldset>
+							</form>
 						</div>
-					 </div>
 
-				    <div class="form-group">
-						<label  class="col-sm-2 control-label">邮箱</label>
-						<div class="col-sm-10">
-							<input  name="email" value="{{ email }}" class="form-control" placeholder="邮箱">
-						</div>
-					 </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="messages">
 
-				    <div class="form-group">
-						<label  class="col-sm-2 control-label">个人网站</label>
-						<div class="col-sm-10">
-							<input  name="website" value="{{ profile.website }}" class="form-control" placeholder="个人网站地址">
-						</div>
-					 </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="settings">
 
-					<div class="form-group">
-						<label  class="col-sm-2 control-label">关于我</label>
-						<div class="col-sm-10">
-							<textarea  name="about_me" placeholder="多少写一点吧..." >{{ profile.about_me }}</textarea>
-						</div>
-					 </div>
+                    </div>
+                  </div>
 
-					<div class="control-group">
-					    <div class="col-sm-10 col-sm-offset-2">
-							<button type="submit" class="btn btn-success" >保存资料</button>
-						</div>
-					</div>
-
-
-
-			   </fieldset>
-			</form>
-
+            </div>
 
 	   </div>
-	   <div class="col-md-4">
 
-		   <div class="edit-handimage">
-			    {% if profile.use_gravatar %}
-					 <img title="{{request.user.username}}" class="avatar-128" src="{{request.user.profile.avatar.large }}">
-				{% else %}
-					<img src="{{ profile.avatar_url }}" name="avatar" class="avatar-128"> <hr>
-				{% endif%}
-
-
-				<!-- 在右边 -->
-				<form  action="{% url 'uploadavatar_upload' %}" method="post" enctype="multipart/form-data">
-					{% csrf_token %}
-
-						<!--<button>{{ CHOOSE_IMAGE }}</button>-->
-						<input type="file"  name="uploadavatarfile" />
-
-
-						<button type="submit" class="btn btn-default" name="publish">上传头像</button>
-				</form>
-		   </div>
-
-	   </div>
    </div>
 
 
