--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -63,7 +63,7 @@
                               <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -74,7 +74,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -85,7 +85,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -96,7 +96,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -107,7 +107,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -118,7 +118,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -129,7 +129,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -140,7 +140,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -151,7 +151,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -162,7 +162,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -173,7 +173,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
@@ -184,7 +184,7 @@
                                  <li class="media">
                                 <div class="media-left">
                                   <a href="#">
-                                    <img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">
+                                    <!--<img class="media-object" src="{{ profile.avatar_url }}" alt="{{ profile.avatar_url }}">-->
                                   </a>
                                 </div>
                                 <div class="media-body">
