--- a/qs/templates/partial/base.html
+++ b/qs/templates/partial/base.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <!--<meta name="description" content="">-->
+  <!--<meta name="author" content="">-->
   <!--<link rel="icon" href="../../favicon.ico">
   -->
   <title> Repository</title>
@@ -55,7 +55,7 @@
      {% endblock %}
   </div>
 
-  <!-- include header -->
+  <!-- include footer -->
   {% include "partial/_footer.html" %}
   <!-- block subpage add html or scripts -->
   {% block others %}
