--- a/user/templates/user/settings.html
+++ b/user/templates/user/settings.html
@@ -35,7 +35,7 @@
                                                           data-toggle="tab"><i class="fa fa-user"></i> 头像设置</a></li>
                 <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><i
                         class="fa fa-code"></i> 资料设置</a></li>
-                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><i
+                <li role="presentation"><a href="#password" aria-controls="password" role="tab" data-toggle="tab"><i
                         class="fa fa-key fa-fw"></i> 修改密码</a></li>
                 <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><i
                         class="fa fa-cog "></i> 博客设置</a></li>
@@ -69,7 +69,7 @@
 
                 <div role="tabpanel" class="tab-pane" id="profile">
                     <div class="edit-profile">
-                        <form class="form-horizontal" method="post" action="settings">
+                        <form class="form-horizontal" method="post" action="{% url 'settings' %}">
                             <fieldset>
                                 <legend class="">个人资料</legend>
                                 {% csrf_token %}
@@ -120,8 +120,46 @@
                     </div>
 
                 </div>
-                <div role="tabpanel" class="tab-pane" id="messages">
+                <div role="tabpanel" class="tab-pane" id="password">
+                    <div class="edit-profile">
+                        <form class="form-horizontal" method="post" action="{% url 'resetpwd' %}">
+                            {% csrf_token %}
+                            <fieldset>
 
+                                <!--<div class="form-group">-->
+                                    <!--<label class="col-sm-2 control-label">当前密码</label>-->
+
+                                    <!--<div class="col-sm-10">-->
+                                        <!--<input name="username" type="password"  class="form-control">-->
+                                    <!--</div>-->
+                                <!--</div>-->
+
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">新密码</label>
+
+                                    <div class="col-sm-10">
+                                        <input name="passpwd1" type="password"  class="form-control">
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">再次输入新密码</label>
+
+                                    <div class="col-sm-10">
+                                        <input name="passpwd2" type="password"  class="form-control">
+                                    </div>
+                                </div>
+
+                                <div class="control-group">
+                                    <div class="col-sm-10 col-sm-offset-2">
+                                        <button type="submit" class="btn btn-success">保存修改</button>
+                                    </div>
+                                </div>
+
+                            </fieldset>
+                            </form>
+                        </div>
+                    </div>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="settings">
 
