--- a/qs/templates/qs/index.html
+++ b/qs/templates/qs/index.html
@@ -3,128 +3,85 @@
 {% load staticfiles%}
 
 {% block head %}
-	 <link rel="stylesheet" href=" {%static 'css/index.css' %}">
-  {% endblock %}
+<link rel="stylesheet" href=" {%static 'css/index.css' %}">
+{% endblock %}
 {% block mainbody %}
 <div class="row">
-	<div class="col-md-8">
-		<nav>
-			<ul class="nav nav-tabs">
-			  <li role="presentation" class="active"><a href="#">今日十大</a></li>
-			  <!--<li role="presentation"><a href="#">热门的</a></li>-->
-			  <!--<li role="presentation"><a href="#">未回答</a></li>-->
-			</ul>
-		</nav>
-		<div class="question-post-list">
-			{% for item in object_list %}
-			<div class="qp-item">
-				<div class="tag-box">
-					<!-- tag-red tag-gray tag-green -->
-					<div class="tag-item">
+    <div class="col-md-8">
+        <nav>
+            <ul class="nav nav-tabs">
+                <li role="presentation" class="active"><a href="#">今日十大</a></li>
+                <!--<li role="presentation"><a href="#">热门的</a></li>-->
+                <!--<li role="presentation"><a href="#">未回答</a></li>-->
+            </ul>
+        </nav>
+        <div class="question-post-list">
+            {% for item in object_list %}
+            <div class="qp-item">
+                <div class="tag-box">
+                    <!-- tag-red tag-gray tag-green -->
+                    <div class="tag-item">
 						<span class="tag-default">
 							2 <small>投票</small>
 						</span>
-					</div>
-					<div class="tag-item">
-						{% if item.count_solution == 0 %}
+                    </div>
+                    <div class="tag-item">
+                        {% if item.count_solution == 0 %}
 							<span class="tag-default tag-red">
 									0 <small>回答</small>
 							</span>
-						{% else %}
+                        {% else %}
 							<span class="tag-default tag-green">
 								{{ item.count_solution }}	 <small>回答</small>
 							</span>
-						{% endif %}
-					</div>
-					<div class="tag-item">
+                        {% endif %}
+                    </div>
+                    <div class="tag-item">
 						<span class="tag-default">
 							{{ item.count_link }}  <small>浏览</small>
 						</span>
-					</div>
-				</div>
-				<div class="content">
-					<div class="info">
-						<a class="name" href="">{{ item.author }}</a>
-						<a class="time" href="">{{ item.created }}</a>
-					</div>
-					<h2 class="title"><a href="{% url 'detail'  pk=item.pk|default:1%}">{{item.title}}</a></h2>
-					<!--<ul class="taglist">-->
-						<!--<li class="tagpopup">-->
-							<!--<a href="" class="tag tag-sm">PHP</a>-->
-						<!--</li>-->
-						<!--<li class="tagpopup">-->
-							<!--<a href="" class="tag tag-sm">MYsql</a>-->
-						<!--</li>-->
-						<!--<li class="tagpopup">-->
-							<!--<a href="" class="tag tag-sm">前端</a>-->
-						<!--</li>-->
-					<!--</ul>-->
-				</div>
-			</div>
-			{% endfor %}
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="info">
+                        <a class="name" href="">{{ item.author }}</a>
+                        <a class="time" href="">{{ item.created }}</a>
+                    </div>
+                    <h2 class="title"><a href="{% url 'detail'  pk=item.pk|default:1%}">{{item.title}}</a></h2>
+                    <!--<ul class="taglist">-->
+                    <!--<li class="tagpopup">-->
+                    <!--<a href="" class="tag tag-sm">PHP</a>-->
+                    <!--</li>-->
+                    <!--<li class="tagpopup">-->
+                    <!--<a href="" class="tag tag-sm">MYsql</a>-->
+                    <!--</li>-->
+                    <!--<li class="tagpopup">-->
+                    <!--<a href="" class="tag tag-sm">前端</a>-->
+                    <!--</li>-->
+                    <!--</ul>-->
+                </div>
+            </div>
+            {% endfor %}
 
-		  <nav>
-			<ul class="pager">
-			  <li class="current">{{ object_list.number  }} / {{ object_list.paginator.num_pages  }}</li>
-			  {% if object_list.has_previous %}
-			  <li class="previous"><a href="?page={{ object_list.previous_page_number  }}"><span aria-hidden="true">&larr;</span> 上一页</a></li>
-			  {% else %}
-			  <li class="previous disabled"><a href=""><span aria-hidden="true">&larr;</span> 上一页</a></li>
-			  {% endif %}
-			  {% if object_list.has_next %}
-			  <li class="next"><a href="?page={{ object_list.next_page_number  }}">下一页 <span aria-hidden="true">&rarr;</span></a></li>
-			  {% else %}
-			  <li class="next disabled"><a href="">下一页 <span aria-hidden="true">&rarr;</span></a></li>
-			  {% endif %}
-			</ul>
-		  </nav>
-
-		</div>
-	</div>
+            <!--分页 -->
+            {% if page_obj%}
+                {% include "./qs/include/pagination.html" %}
+            {% endif %}
+        </div>
+    </div>
 
 
-	<div class="col-md-4">
-		<div class="sidebar-box">
-				<h2 class="title">标签云</h2>
-				<ul class="taglist">
-					<li class="tag"><a href="">javascript</a></li>
-					<li class="tag"><a href="">PHP</a></li>
-					<li class="tag"><a href="">git</a></li>
-					<li class="tag"><a href="">PHP</a></li>
-					<li class="tag"><a href="">GO</a></li>
-					<li class="tag"><a href="">PHP</a></li>
-					<li class="tag"><a href="">PHP</a></li>
-					<li class="tag"><a href="">CSS3</a></li>
-					<li class="tag"><a href="">PHP</a></li>
-					<li class="tag"><a href="">程序员</a></li>
-					<li class="tag"><a href="">产品经理</a></li>
-					<li class="tag"><a href="">C#</a></li>
-					<li class="tag"><a href="">python</a></li>
-					<li class="tag"><a href="">PHP</a></li>
-					<li class="tag"><a href="">PHP</a></li>
-					<li class="tag"><a href="">PHP</a></li>
-					<li class="tag"><a href="">DBA</a></li>
-					<li class="tag"><a href="">PHP</a></li>
-					<li class="tag"><a href="">sql</a></li>
-				</ul>
-		</div>
+    <div class="col-md-4">
+        <div class="sidebar-box">
+            <!-- 标签云 -->
+            {% include "./partial/tags.html" %}
+        </div>
 
-			<div class="sidebar-box">
-		<h2 class="title">最新问答</h2>
-		<ul class="qalist">
-			<li class="qa"><a href="">想用bootstrap+angular</a><small>7人回答|已解决</small></li>
-			<li class="qa"><a href="">想用bootstrap+angular开发一后台管理系统，请问有人知道这方面的开源项目吗？</a><small>7人回答</small></li>
-			<li class="qa"><a href="">windows结构tmPitchAndFamily中的pitch什么意思? </a><small>7人回答</small></li>
-			<li class="qa"><a href="">想用bootstrap+angular开发一后台管理系统，请问有人知道这方面的开源项目吗？</a><small>7人回答</small></li>
-			<li class="qa"><a href="">windows结构tmPitchAndFamily中的pitch什么意思? +angular开发一后台管理系统，请问有人知道这方面的开源项目吗？</a><small>7人回答</small></li>
-			<li class="qa"><a href="">想用bootstrap+angular开发一后台管理系统，请问有人知道这方面的开源项目吗？</a><small>7人回答|已解决</small></li>
-			<li class="qa"><a href="">想用bootstrap+angular开发一后台管理系统，请问有人知道这方面的开源项目吗？</a><small>7人回答</small></li>
-			<li class="qa"><a href="">想用bootstrap+angular开发一后台管理系统，请问有人知道这方面的开源项目吗？</a><small>7人回答</small></li>
-			<li class="qa"><a href="">想用bootstrap+angular开发一后台管理系统，请问有人知道这方面的开源项目吗？</a><small>7人回答</small></li>
-			<li class="qa"><a href="">想用bootstrap+windows结构tmPitchAndFamily中的pitch什么意思? </a><small>7人回答|已解决</small></li>
-		</ul>
-	</div>
-	</div>
+        <div class="sidebar-box">
+            <!--  最新问答  -->
+            {% include "./partial/news.html" %}
+        </div>
+    </div>
 </div>
 
 
