尝试增加oauth模块

--- a/user/templates/registration/login.html
+++ b/user/templates/registration/login.html
@@ -34,6 +34,8 @@
         <div class="col-md-6">
           <input type="checkbox" value="remember-me">
           <label>记住登录</label>
+          <label><a href="{% url 'github_oauth' %}">github</label>
+
         </div>
         <div class="col-md-6 text-right">
           <!--<a href="">忘记密码</a>-->
