--- a/user/templates/user/settings.html
+++ b/user/templates/user/settings.html
@@ -38,7 +38,7 @@
                 <li role="presentation"><a href="#password" aria-controls="password" role="tab" data-toggle="tab"><i
                         class="fa fa-key fa-fw"></i> 修改密码</a></li>
                 <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><i
-                        class="fa fa-cog "></i> 博客设置</a></li>
+                        class="fa fa-cog "></i> 第三方帐号设置</a></li>
             </ul>
 
             <!-- Tab panes -->
@@ -114,25 +114,15 @@
                                     </div>
                                 </div>
 
-
                             </fieldset>
                         </form>
                     </div>
-
                 </div>
                 <div role="tabpanel" class="tab-pane" id="password">
                     <div class="edit-profile">
                         <form class="form-horizontal" method="post" action="{% url 'resetpwd' %}">
                             {% csrf_token %}
                             <fieldset>
-
-                                <!--<div class="form-group">-->
-                                    <!--<label class="col-sm-2 control-label">当前密码</label>-->
-
-                                    <!--<div class="col-sm-10">-->
-                                        <!--<input name="username" type="password"  class="form-control">-->
-                                    <!--</div>-->
-                                <!--</div>-->
 
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">新密码</label>
@@ -143,7 +133,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label class="col-sm-2 control-label">再次输入新密码</label>
+                                    <label class="col-sm-2 control-label">再次输入密码</label>
 
                                     <div class="col-sm-10">
                                         <input name="passpwd2" type="password"  class="form-control">
@@ -155,14 +145,12 @@
                                         <button type="submit" class="btn btn-success">保存修改</button>
                                     </div>
                                 </div>
-
                             </fieldset>
-                            </form>
-                        </div>
+                        </form>
                     </div>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="settings">
-
+                    {% include "./user/include/oauth.html" %}
                 </div>
             </div>
 
